# taichi-aot-demo

./: .gitignore  CMakeLists.txt
8_nerf/: CMakeLists.txt  app.cpp
8_nerf/assets/: taichi_ngp.py
ci/: run_tests.py
mpm88/desktop/: CMakeLists.txt  mpm88.cpp  mpm88.hpp  mpm88.py
mpm88/desktop/shaders/: graphs.tcb  init_particles_c64_0_k0000_vk_0_t00.spv  metadata.json  metadata.tcb  substep_g2p_c62_0_k0005_vk_0_t00.spv  substep_p2g_c58_0_k0002_vk_0_t00.spv  substep_reset_grid_c56_0_k0001_vk_0_t00.spv  substep_update_grid_v_c60_0_k0004_vk_0_t00.spv
mpm88_gl/: CMakeLists.txt  gl_utils.h  linux_compile_and_run.sh  mpm88.cpp  mpm88.hpp  mpm88.py  renderer.cpp  renderer.h
raindrops/app/: build.gradle
sph/: CMakeLists.txt  sph.cpp  sph.py
sph/shaders/: advance_c62_0_k0013_vk_0_t00.spv  boundary_handle_c64_0_k0014_vk_0_t00.spv  graphs.tcb  initialize_particle_c56_0_k0003_vk_0_t00.spv  initialize_particle_c56_0_k0003_vk_1_t01.spv  metadata.json  metadata.tcb  update_density_c58_0_k0006_vk_0_t00.spv  update_force_c60_0_k0012_vk_0_t00.spv
stable_fluid/desktop/: CMakeLists.txt  stable_fluid.cpp  stable_fluid_graph.py
stable_fluid/desktop/shaders/: advect_c56_0_k0001_vk_0_t00.spv  advect_c56_1_k0002_vk_0_t00.spv  apply_impulse_c58_0_k0007_vk_0_t00.spv  divergence_c60_0_k0008_vk_0_t00.spv  dye_to_image_c66_0_k0011_vk_0_t00.spv  graphs.tcb  metadata.json  metadata.tcb  pressure_jacobi_c62_0_k0009_vk_0_t00.spv  subtract_gradient_c64_0_k0010_vk_0_t00.spv
texture/desktop/: CMakeLists.txt  texture.cpp  texture.hpp
texture/desktop/shaders/: graphs.tcb  metadata.json  (+1 more)
(+13 files in other folders)
